Crash when I try to use "Join" (Ctrl Key + J) with two meshes #48822

Closed
opened 2016-07-10 14:10:12 +02:00 by Jefferson Rausseo · 8 comments

System Information
GNU/Linux Manjaro 64bits
Nvidia 8600 GT

Blender Version
Broken: 2.77 ae2033a
Worked: 2.77 Build Official

Short description of error
Crash when I try to use "Join" (Crtl Key + J) with two meshes.

Exact steps for others to reproduce the error

  • Create two cubes.
  • Select the two cubes created and press "Ctrl Key + J" (Join).
  • Crash!!!.
**System Information** GNU/Linux Manjaro 64bits Nvidia 8600 GT **Blender Version** Broken: 2.77 ae2033a Worked: 2.77 Build Official **Short description of error** Crash when I try to use "Join" (Crtl Key + J) with two meshes. **Exact steps for others to reproduce the error** - Create two cubes. - Select the two cubes created and press "Ctrl Key + J" (Join). - Crash!!!.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jefrau

Added subscriber: @jefrau
Jefferson Rausseo changed title from Crash when I try to use "Join" (Ctrl Key + J) with two mesh to Crash when I try to use "Join" (Ctrl Key + J) with two meshes 2016-07-10 14:14:18 +02:00

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

I was also able to reproduce this on Windows 7 x64 on build ae2033a. Joining objects seems to be working fine in build 4b0aeaf so this is probably a recent issue. Latest build gave me "Error: EXCEPTION_ACCESS_VIOLATION" message.

I was also able to reproduce this on Windows 7 x64 on build ae2033a. Joining objects seems to be working fine in build 4b0aeaf so this is probably a recent issue. Latest build gave me "Error: EXCEPTION_ACCESS_VIOLATION" message.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-07-10 20:12:45 +02:00

Yeah, nice crazy typo in one of my recent commits… thanks for finding it quickly!

Yeah, nice crazy typo in one of my recent commits… thanks for finding it quickly!

This issue was referenced by 47c47c7e78

This issue was referenced by 47c47c7e78e132bf668ca9b6a63eefbda3f36ea8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48822
No description provided.