Fix T48822: Crash when I try to use "Join" (Ctrl Key + J) with two meshes.

Own stupid typo in recent refactor work...